objects/C_E_Generic_Article__kav.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <formula>CreatedBy.LastName + &apos;, &apos; +  CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <label>Links</label>
        <type>Url</type>
    </fields>
</CustomObject>